src/objects/zPaper_Document_Set_Action__c.object
<CustomObject>
    <description>Action button that will be applied to entries on the Document Set.</description>
    <fields>
        <fullName>Button_Event_Name__c</fullName>
        <label>Button Event Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Location__c</fullName>
        <description>Where to place the layout - either as the first column in the table or the last.</description>
        <inlineHelpText>Where to place the layout - either as the first column in the table or the last.</inlineHelpText>
        <label>Column Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Holds the Lightning component that should be invoked when this action is selected instead of sending the event to the zPaper rules engine.</description>
        <inlineHelpText>The Lightning component that implements the functionality of this Action.</inlineHelpText>
        <label>Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label text to be placed on the button</description>
        <inlineHelpText>The label text to be placed on the button</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_In_Stages__c</fullName>
        <description>Comma-separated list of Stages that specify when a button should be displayed. If the field is blank, or if one of the stages in the list is checked, the button will be displayed.</description>
        <label>Visible In Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zDocument_Design_Layout__c</fullName>
        <label>Document Design Layout</label>
        <referenceTo>ZDocument_DesignLayout__c</referenceTo>
        <relationshipLabel>Document Set Action Buttons</relationshipLabel>
        <relationshipName>zPaper_Document_Set_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>zPaper Document Set Action</label>
    <nameField>
        <displayFormat>ZPDocSetAct-{0000}</displayFormat>
        <label>zPaper Document Set Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zPaper Document Set Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>